# periodiq

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  django_periodiq.py  example.py  periodiq.py  pyproject.toml  requirements.txt  setup.py
requirements/: default.txt
tests/unit/: test_cron.py  test_middleware.py
