[tool.poetry]
name = "django-periodiq"
version = "0.13.0"
description = "Django cron for Dramatiq"
authors = ["duyen.huynh@gimitheapp.com"]
license = "MIT"  # optional, but recommended
readme = "README.md"  # optional, if you have one
include = ["django_periodiq.py"]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<4.0"
dramatiq = ">=1.16,<2.0"
pendulum = ">=3.0,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
